--- a/src/main/resources/assets/myfirstmod/lang/en_US.lang
+++ b/src/main/resources/assets/myfirstmod/lang/en_US.lang
@@ -1,5 +1,9 @@
 #Items
 item.redingot_item.name=Redingot Item
-#
+
+# Blocks
+# tile.myfirstmod:red_ore_block.name=Red Ore Block
+tile.red_ore_block.name=Red Ore Block
+
 # Creative Tab
 itemGroup.myfirstmod:creative_tab=MyFirst Mod's Tab
