--- a/src/main/resources/assets/myfirstmod/lang/en_US.lang
+++ b/src/main/resources/assets/myfirstmod/lang/en_US.lang
@@ -1,5 +1,8 @@
 #Items
 item.redingot_item.name=Redingot Item
+item.tomato_item.name=Tomato
+item.tomato_seed_item.name=Tomato Seed
+
 
 # Blocks
 # tile.myfirstmod:red_ore_block.name=Red Ore Block
